assets/css/style.css
/* ... */
.services div {
    line-height: 1.3;
    margin: 10px;
    padding-top: 0;
    text-align: center;
}

.services h2 {
    color: black;
}

.services p {
    padding-top: 10px;
}

/* ABOUT PAGE - Who Section */

.about-wrapper {
    background-color: #8b1933;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

#about-us-img {
    padding: 0 5% 5%;
    width: 90%;
}

/* ABOUT PAGE - Location Section */

#location-wrapper {
    background-color: white;
    color: black;
    display: flex;
    flex-direction: column;
}

.location-text {
    padding: 5%;
    text-align: center;
    width: 100%;
}

.location-text h2 {
    color: black;
    justify-content: left;
}

.location-text a {
    color: black;
}

.map-responsive {
    overflow: hidden;
    position: relative;
}

.map-responsive iframe {
    /* left:0;
    top:0; */
    /* position: sticky; */
    /* float: right; */
    /* margin-right: 12%; */
    height: 300px;
    width: 100%;
}

/* RESOURCES PAGE */

.section-wrapper-resources {
    background-color: #8b1933;
    color: white;
    /* display: flex;
    flex-direction: column; */
    text-align: center;
    width: 100%;
}

.section-wrapper-resources h2 {
    padding-bottom: 3%;
}

.section-wrapper-resources > div {
    padding-bottom: 0;
}

.resources-list {
    line-height: 1.4;
    list-style-type: none;
    padding: 0 5% 5%;
    text-align: center;
    width: 100%;
}

.resources-list li {
    margin-block: 5%;
}

.resources-list a {
    color: white;
}

/* .resources-list a:link {
    color: red;
    text-decoration: solid;
} */

/* CONTACT PAGE  - Contact form section*/

.contact-form {
    background-color: #8b1933;
    color: white;
    display: flex;
    flex-direction: column;
}

.form {
    align-items: center;
    display: flex;
    flex-direction: column;
}

.text-input {
    background: white;
    border: 2px solid grey;
    border-radius: 5px;
    height: 25px;
    margin: 5px 5px 20px 0;
    width: 90%;
}

.text-input:hover {
    border-color: black;
}

.submit-button {
    background-color: black;
    border-radius: 5px;
    color: white;
    font-size: 100%;
    margin-block: 20px;
    padding: 10px 15px;
}

.submit-button:hover {
    background-color: white;
    color: black;
}

/* CONTACT PAGE  - Contact Us section*/

.section-wrapper {
    display: flex;
    flex-direction: column;
}

.contact-us {
    background-color: white;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.contact-us h2 {
    color: black;
    padding: 0 5% 3% 5%;
    text-align: center;
    width: 100%;
}

.contact-us h3 {
    color: black;
    font-size: 90%;
}

.contact-us-text {
    padding: 5%;
    text-align: center;
    width: 100%;
}

.section-wrapper-contact-us {
    background-color: white;
    display: flex;
    flex-direction: column;
    padding-block: 5%;
    text-align: center;
    width: 100%;
}

/* FOOTER */

.footer-wrapper {
    background-color: gray;
    bottom: 0;
    display: flex;
    height: 60px;
    justify-content: space-evenly;
    left: 0;
    padding-top: 12px;
    text-align: center;
    /* position: fixed; */
    width: 100%;
}

.footer-wrapper ul {
    display: flex;
    font-size: 200%;
    justify-content: space-evenly;
    list-style-type: none;
}

.footer-wrapper i {
    color: black;
    margin-inline: 10px;
}

.footer-wrapper i:hover {
    color: #8b1933;
    /* text-decoration: underline; */
} 

/* MEDIA QUERIES FOR RESPONSIVENESS */

/* For tablet screens sizes from 481 - 768px wide */
/* Mobile first design used therefore this section not needed */

/* For laptop screens sizes from 768 - 1024px wide */

@media screen and (min-width: 768px) {
    .logo {
        font-size: 130%;
        padding: 3% 3% 0;
    }
    
    .menu {
        font-size: smaller;
        justify-content: center;
        padding: 2%;
    }
    
    .hero-image {
        padding-top: 2.5%;
    }

    /* Moves hero text down for better layout on larger screen */
    .hero-text {
        padding-top: 2%;
    }

     /*  Set containers into a row for improved layout at medium screen size */
    .services {
        flex-direction: row;
    } 

    /* Controls white space for services section for medium screen*/
    .services div {
        padding-top: 2%;
        width: 33%;
    }

    /* Reduces image size for medium screen*/
    #about-us-img {
        /* padding-top: 0; */
        width: 50%;
    }

    /* Controls size & postion of video on larger screen - from w3schools*/
     /* https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */
    .video-container {
        display: flex;
        height: 60%;
        margin-inline: 50px;
        overflow: hidden;
        /* width: 100%; */
        padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
        position: relative;
    }

    /* Controls size & postion of video on larger screen*/
    .resource-video {
        /* align-items: center; */
        bottom: 0;
        height: 100%;
        /* left: 0; */
        position: absolute;
        /* right: 0;
        top: 0; */
        width: 100%;
    }

    /* Reduces visual space for larger screen size around request-contact text*/
    .contact-us-text {
        padding-block: 2%;
        /* text-align: center;
        width: 100%; */
    }

    .section-wrapper-contact-us {
        /* background-color: white;
        display: flex;
        flex-direction: column; */
        padding-block: 2%;
        /* text-align: center;
        width: 100%; */
    }

    .section-wrapper-contact-us > p {
        margin-top: 1%;
    }
}
/* ... */

